--- a/mobile/.gitignore
+++ b/mobile/.gitignore
@@ -2,8 +2,10 @@
 
 # dependencies
 /node_modules
+/.expo
 /.pnp
 .pnp.js
+/web-build
 
 # testing
 /coverage
@@ -21,3 +23,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
